compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__type_alias__alias_direct_cycle.snap
---
source: compiler-core/src/type_/tests/type_alias.rs
expression: "\ntype A = #(A, A)\n"
---
----- SOURCE CODE

type A = #(A, A)


----- ERROR
error: Type cycle
  ┌─ /src/one/two.rakun:2:1
  │
2 │ type A = #(A, A)
  │ ^^^^^^^^^^^^^^^^

This type alias is defined in terms of itself.

    ┌─────┐
    │     A
    └─────┘
If we tried to compile this recursive type it would expand
forever in a loop, and we'd never get the final type.
